--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000",
+  "proxy": "https://cms-9kp4qrfxv-sakthis-projects-55116336.vercel.app/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
